--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row clearfix">
-      <div>
-        <h1 class="alert alert-dark text-center mt-2">ChatAPP</h1>
+      <div style="margin-top: 20px;">
+        <button class="btn btn-outline-primary" (click)="logout()" style="float: right">Çıkış Yap</button>
       </div>
         <div class="col-lg-12 mt-2">
             <div class="card chat-app">
@@ -13,10 +13,10 @@
                     <ul class="list-unstyled chat-list mt-2 mb-0">
                       @for(user of users; track user){
                         <li class="clearfix" [ngClass]="selectedUserId == user.id ? 'active' : ''" (click)="changeUser(user)">
-                            <img src="https://bootdey.com/img/Content/avatar/{{user.avatar}}" alt="avatar">
+                            <img src="https://localhost:7010/avatar/{{user.photo}}" alt="avatar">
                             <div class="about">
-                                <div class="name">{{user.name}}</div>
-                                <div class="status"> <i class="fa fa-circle" [ngClass]="user.status === 'online' ? 'online' : 'offline'"></i> {{user.status}} </div>                                            
+                                <div class="name">{{user.fullName}}</div>
+                                <div class="status"> <i class="fa fa-circle" [ngClass]="user.status === 'Çevrimiçi' ? 'Çevrimiçi' : 'Çevrimdışı'"></i> {{user.status}} </div>                                            
                             </div>
                         </li>
                       }                      
@@ -28,10 +28,10 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <a href="javascript:void(0);" data-toggle="modal" data-target="#view_info">
-                                    <img src="https://bootdey.com/img/Content/avatar/{{selectedUser.avatar}}" alt="avatar">
+                                    <img src="https://localhost:7010/avatar/{{selectedUser.photo}}" alt="avatar">
                                 </a>
                                 <div class="chat-about">
-                                    <h6 class="m-b-0">{{selectedUser.name}}</h6>
+                                    <h6 class="m-b-0">{{selectedUser.fullName}}</h6>
                                     <small>{{selectedUser.status}}</small>
                                 </div>
                             </div>                         
@@ -60,60 +60,15 @@
                     </div>
                     <div class="chat-message clearfix">
                         <div class="input-group mb-0">
-                            <div class="input-group-prepend">
+                            <div (click)="sendMessage()" class="input-group-prepend">
                                 <span class="input-group-text"><i class="fa fa-send"></i></span>
                             </div>
-                            <input type="text" class="form-control" placeholder="Enter text here..." style="height: 30px;">
+                            <input [(ngModel)]="message" type="text" class="form-control" placeholder="Enter text here..." style="height: 30px;">
                         </div>
                     </div>
                 </div>
                 }@else {
-                  <div class="chat">
-                    <div class="chat-header clearfix">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <a href="javascript:void(0);" data-toggle="modal" data-target="#view_info">
-                                    <img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="avatar">
-                                </a>
-                                <div class="chat-about">
-                                    <h6 class="m-b-0">Aiden Chavez</h6>
-                                    <small>Last seen: 2 hours ago</small>
-                                </div>
-                            </div>                         
-                        </div>
-                    </div>
-                    <div class="chat-history">
-                        <ul class="m-b-0">
-                            <li class="clearfix">
-                                <div class="message-data text-right">
-                                    <span class="message-data-time">10:10 AM, Today</span>
-                                    <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="avatar">
-                                </div>
-                                <div class="message other-message float-right"> Hi Aiden, how are you? How is the project coming along? </div>
-                            </li>
-                            <li class="clearfix">
-                                <div class="message-data">
-                                    <span class="message-data-time">10:12 AM, Today</span>
-                                </div>
-                                <div class="message my-message">Are we meeting today?</div>                                    
-                            </li>                               
-                            <li class="clearfix">
-                                <div class="message-data">
-                                    <span class="message-data-time">10:15 AM, Today</span>
-                                </div>
-                                <div class="message my-message">Project has been already finished and I have results to show you.</div>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="chat-message clearfix">
-                        <div class="input-group mb-0">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text"><i class="fa fa-send"></i></span>
-                            </div>
-                            <input type="text" class="form-control" placeholder="Enter text here..." style="height: 30px;">
-                        </div>
-                    </div>
-                </div>
+                
                 }
                 
             </div>
