--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,14 +8,14 @@
             <div class="card-body">
                 <div class="form-group">
                     <label>Kulanıcı Adı</label>
-                    <input type="text" class="form-control">
+                    <input [(ngModel)]="loginModel.usernameoremail" type="text" class="form-control">
                 </div>
                 <div class="form-group">
                     <label>Şifre</label>
-                    <input type="text" class="form-control">
+                    <input [(ngModel)]="loginModel.password" type="password" class="form-control">
                 </div>
                 <div class="form-group mt-2">
-                    <button class="btn btn-dark w-100">Giriş Yap</button>
+                    <button class="btn btn-dark w-100" (click)="login()">Giriş Yap</button>
                 </div>
                 <div class="form-group mt-2">
                     <a class="btn btn-danger w-100" href="/register">Kayıt Ol</a>
